fixing navbar on mobile

--- a/src/components/contact/style.scss
+++ b/src/components/contact/style.scss
@@ -2,7 +2,7 @@
 
 .contact-form-container {
   flex: 1 1 100%;
-  padding: 50px 0;
+  padding-bottom: 100px;
   flex-wrap: nowrap;
   gap: 30px;
   .contact-details-container {
@@ -117,6 +117,7 @@
 @media only screen and (max-width: 1024px) {
   .contact-form-container {
     flex-wrap: wrap;
+    padding-bottom: 30px;
     .contact-details-container {
       flex: 1 1 100%;
 
