--- a/src/components/hero/style.scss
+++ b/src/components/hero/style.scss
@@ -1,7 +1,8 @@
 @import "../../index.scss";
 
 .hero-container {
-  padding: 100px unset;
+  padding-top: 100px;
+  padding-bottom: 100px;
   justify-content: space-between;
   flex: 1 1 100%;
   .image-container {
@@ -42,19 +43,22 @@
 
 @media only screen and (max-width: 1024px) {
   .hero-container {
-    padding: 30px unset;
+    padding-top: 30px;
+    padding-bottom: 30px;
     flex-direction: row-reverse;
     justify-content: center;
     .image-container {
       flex: 1 1 100%;
       align-content: flex-start;
       justify-content: center;
-      .picture {
-        background: $gray;
-        height: 450px;
-        width: 100%;
-        max-width: 400px;
-        border-radius: 20px;
+      .picture-container {
+        .picture {
+          background: $gray;
+          height: 450px;
+          width: 100%;
+          max-width: 400px;
+          border-radius: 20px;
+        }
       }
     }
     .welcome-container {
